--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.66.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.5",
+    "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
