--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^7.3.5",
     "@mui/x-date-pickers": "^8.19.0",
     "@reduxjs/toolkit": "^2.10.0",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
