--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
